--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,30 +1,20 @@
-#spring.application.name=cloud-producer
-#在服务注册时,需要确认一下服务是否正确，若设置为false将不会启动注册操作
-#eureka.client.register-with-eureka=true
-#server.port=9002
-#eureka.client.serviceUrl.defaultZone=http://localhost:9000/eureka/
-#参数用于定义服务续约任务的调用间隔时间，默认为30秒，注意：管网建议不要更更改服务续约的间隔时间。
-eureka.instance.lease-renewal-interval-in-seconds=30
-#参数用于定义服务失效的时间，默认为90秒。
-eureka.instance.lease-expiration-duration-in-seconds=90
-#监控开关
-spring.sleuth.enabled=true
-#所设置的值介于0.0到1.0之间，1.0则表示全部采集。
-spring.sleuth.sampler.percentage=1.0
-spring.zipkin.base-url=http://localhost:9007
-
-#rabbitmq配置
-spring.rabbitmq.host=192.168.1.137
-spring.rabbitmq.port=5672
-spring.rabbitmq.username=admin
-spring.rabbitmq.password=admin
-#log日志文件
-#logging.file=logs/eureka-client-one.log
-
-#运行监控状态
-management.server.port=9999
-management.server.ssl.enabled=false
-management.server.servlet.context-path=/
-#不做安全验证,actuator/+端点名访问
-management.endpoints.web.exposure.exclude="*"
-management.endpoint.health.show-details=always
+server.port=9000
+spring.application.name=eureka-server
+eureka.instance.hostname=peer1
+#让服务注册中心不注册自己,高可用实际上就是将自己作为服务向
+# 其他服务注册中心注册自己，其中默认为ture
+eureka.client.registerWithEureka=false
+#从eureka server中获取注册信息。其中默认为ture
+eureka.client.fetchRegistry=false
+#注册中心默认端口就是8761，也可通过下面的方式定义其他端口。与server交互地址。
+eureka.client.serviceUrl.defaultZone=http://localhost:9000/eureka/
+# 测试时关闭自我保护机制，保证不可用服务及时踢出
+#如果 Eureka Serve 接收到的服务续约低于为该值配置的百分比（默认为 15 分钟
+#内低于 85% ），则服务器开启自我保护模式，即不再剔除注册列表的信息 。
+#eureka.server.enable-self-preservation=false
+#resolved up problems
+management.security.enabled=false
+#开启认证安全认证
+#security.basic.enabled=true
+#security.user.name=admin
+#security.user.password=admin
