--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,11 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.example</groupId>
-	<artifactId>cloud-eurekaServer</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<artifactId>eureka-server</artifactId>
+	<version>0.1</version>
 	<packaging>jar</packaging>
 
-	<name>cloud-eurekaServer</name>
+	<name>eureka-server</name>
 	<description>Demo project for Spring Boot</description>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -61,6 +61,7 @@
 	</dependencyManagement>
 
 	<build>
+		<finalName>${artifactId}</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
