--- a/pom.xml
+++ b/pom.xml
@@ -84,13 +84,16 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <outputDirectory>src/main/docker</outputDirectory>
+                </configuration>
 			</plugin>
 			<!-- Docker maven plugin -->
-			<plugin>
+			<!--<plugin>
 				<groupId>com.spotify</groupId>
 				<artifactId>docker-maven-plugin</artifactId>
 				<version>1.0.0</version>
-				<!--这里构建docker镜像-->
+				&lt;!&ndash;这里构建docker镜像&ndash;&gt;
 				<executions>
 					<execution>
 						<id>build-image</id>
@@ -102,10 +105,10 @@
 				</executions>
 				<configuration>
 					<imageName>${docker.image.prefix}/${project.artifactId}</imageName>
-					<!--这里不需要加版本号，不然会出两个版本-->
-					<!-- <imageTags>${project.version}</imageTags>-->
+					&lt;!&ndash;这里不需要加版本号，不然会出两个版本&ndash;&gt;
+					&lt;!&ndash; <imageTags>${project.version}</imageTags>&ndash;&gt;
 					<dockerDirectory>src/main/docker</dockerDirectory>
-					<!--构建docker镜像地址-->
+					&lt;!&ndash;构建docker镜像地址&ndash;&gt;
 					<dockerHost>http://192.168.124.128:2375</dockerHost>
 					<resources>
 						<resource>
@@ -115,7 +118,7 @@
 						</resource>
 					</resources>
 				</configuration>
-			</plugin>
+			</plugin>-->
 			<!-- Docker maven plugin -->
 		</plugins>
 	</build>
