--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,9 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
                     <outputDirectory>src/main/docker</outputDirectory>
+					<jvmArguments>
+						-Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5005
+					</jvmArguments>
                 </configuration>
 			</plugin>
 			<!-- Docker maven plugin -->
