--- a/pom.xml
+++ b/pom.xml
@@ -87,7 +87,7 @@
                 <configuration>
                     <outputDirectory>src/main/docker</outputDirectory>
 					<jvmArguments>
-						-Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5005
+						-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005
 					</jvmArguments>
                 </configuration>
 			</plugin>
